Update views, server, and add Python linting configs
- Updated MAUI views (BackupRestore, OSInstall, Profile, SDCard, Settings)
- Updated web server and configure_pi script
- Added Python linting configuration files (.flake8, .pylintrc, pyproject.toml)

--- a/RaspberryPiManager/Views/SDCardView.xaml
+++ b/RaspberryPiManager/Views/SDCardView.xaml
@@ -22,9 +22,9 @@
                         <Label Grid.Row="1" Text="{Binding DeviceId}" FontSize="14" />
                         <Label Grid.Row="2" Text="{Binding TotalSizeBytes, StringFormat='Size: {0:N0} bytes'}" FontSize="12" />
                         <StackLayout Grid.Row="3" Orientation="Horizontal" Spacing="10">
-                            <Button Text="Format" Command="{Binding Source={RelativeSource AncestorType={x:Type vm:SDCardViewModel}}, Path=FormatSDCardCommand}"
+                            <Button Text="Format" Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.FormatSDCardCommand}"
                                     CommandParameter="{Binding .}" />
-                            <Button Text="Eject" Command="{Binding Source={RelativeSource AncestorType={x:Type vm:SDCardViewModel}}, Path=EjectSDCardCommand}"
+                            <Button Text="Eject" Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.EjectSDCardCommand}"
                                     CommandParameter="{Binding .}" />
                         </StackLayout>
                     </Grid>
