--- a/RaspberryPiManager/Views/BackupRestoreView.xaml
+++ b/RaspberryPiManager/Views/BackupRestoreView.xaml
@@ -29,9 +29,10 @@
                             <Label Text="{Binding BackupSizeBytes, StringFormat='Size: {0:N0} bytes'}" FontSize="12" />
                         </StackLayout>
                         <Button Grid.Column="1" Text="Restore"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type vm:BackupRestoreViewModel}}, Path=RestoreBackupCommand}" />
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.RestoreBackupCommand}"
+                                CommandParameter="{Binding .}" />
                         <Button Grid.Column="2" Text="Delete"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type vm:BackupRestoreViewModel}}, Path=DeleteBackupCommand}"
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.DeleteBackupCommand}"
                                 CommandParameter="{Binding .}" />
                     </Grid>
                 </DataTemplate>
