--- a/RaspberryPiManager/Views/ProfileView.xaml
+++ b/RaspberryPiManager/Views/ProfileView.xaml
@@ -22,18 +22,14 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <StackLayout Grid.Column="0">
                             <Label Text="{Binding Name}" FontSize="16" FontAttributes="Bold" />
                             <Label Text="{Binding Description}" FontSize="12" />
                             <Label Text="{Binding ModifiedDate, StringFormat='Modified: {0:g}'}" FontSize="10" />
                         </StackLayout>
-                        <Button Grid.Column="1" Text="Load"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type vm:SettingsViewModel}}, Path=LoadProfileCommand}"
-                                CommandParameter="{Binding .}" />
-                        <Button Grid.Column="2" Text="Delete"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type vm:ProfileViewModel}}, Path=DeleteProfileCommand}"
+                        <Button Grid.Column="1" Text="Delete"
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.DeleteProfileCommand}"
                                 CommandParameter="{Binding .}" />
                     </Grid>
                 </DataTemplate>
