--- a/RaspberryPiManager/Views/BackupRestoreView.xaml
+++ b/RaspberryPiManager/Views/BackupRestoreView.xaml
@@ -16,7 +16,7 @@
 
         <CollectionView Grid.Row="1" ItemsSource="{Binding Backups}">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="models:BackupProfile" x:CompileBindings="False">
                     <Grid Padding="10">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
